Finish main page and start work with detailsPage

--- a/index.html
+++ b/index.html
@@ -7,38 +7,146 @@
       content="width=device-width, initial-scale=1.0, user-scalable=yes"
     />
     <title>PZ_1_4</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link
+      href="http://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" type="text/css" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
   <body>
     <div class="container">
-      <div id="sideNav" class="overlay">
-        <img src="./img/navbar/close_ico.png" class="closebtn" onclick="closeNav()"/>
+        <div id="sideNav" class="overlay">
+        <img
+          src="./img/navbar/close_ico.png"
+          class="closebtn"
+          onclick="closeNav()"
+        />
         <div class="overlay-content">
           <div class="information_side">
-            <img src="./img/navbar/bg.png" alt="loading..." class="navbar_bg_img">
+            <img
+              src="./img/navbar/bg.png"
+              alt="loading..."
+              class="navbar_bg_img"
+            />
             <div class="content">
-                <p><img src="./img/navbar/people_ico.png" alt="loading...">Мій профіль</p>
-                <p><img src="./img/navbar/order_ico.png" alt="loading...">Замовлення</p>
-                <p><img src="./img/navbar/message_ico.png" alt="loading...">Повідомлення</p>
-                <p><img src="./img/navbar/heart_ico.png" alt="loading...">Улюбленне</p>
-                <p><img src="./img/navbar/friends_ico.png" alt="loading...">Друзі</p>
-                <p><img src="./img/navbar/mail_ico.png" alt="loading...">Сповіщення</p>
-                <p><img src="./img/navbar/settings_ico.png" alt="loading...">Налаштування</p>
+              <a href="#"
+                ><img src="./img/navbar/people_ico.png" alt="loading..." />Мій
+                профіль</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/order_ico.png"
+                  alt="loading..."
+                />Замовлення</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/message_ico.png"
+                  alt="loading..."
+                />Повідомлення</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/heart_ico.png"
+                  alt="loading..."
+                />Улюбленне</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/friends_ico.png"
+                  alt="loading..."
+                />Друзі</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/mail_ico.png"
+                  alt="loading..."
+                />Сповіщення</a
+              >
+              <a href="#"
+                ><img
+                  src="./img/navbar/settings_ico.png"
+                  alt="loading..."
+                />Налаштування</a
+              >
             </div>
           </div>
           <div class="avatar-side">
-            <img src="./img/navbar/avatar.png" alt="loading..."  class="navbar_avatar_img">
+            <img
+              src="./img/navbar/avatar.png"
+              alt="loading..."
+              class="navbar_avatar_img"
+            />
             <p>Іскендеров Артур</p>
           </div>
         </div>
-      </div>
+        </div>
 
-      <div class="app_bar">
-        <img src="./img/side/menu_ico.png" alt="loading..." onclick="openNav()"/>
+        <div class="app_bar">
+        <img
+          src="./img/side/menu_ico.png"
+          alt="loading..."
+          onclick="openNav()"
+        />
         <p>Популярні тури</p>
-      </div>
+        </div>
+
+        <div class="main_content">
+            <img src="./img/news/first_news.png" alt="loading..." class="news_img"/>
+            <div class="content_navigation">
+                <a href="detailsPage.html">Тур вихідного дня "Гостинність Чорнобаївки"</a>
+                <div class="interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." />
+                    <img src="./img/side/share_ico.png" alt="loading..." />
+                </div>
+            </div>
+        </div>
+
+        <div class="main_content">
+            <img src="./img/news/second_news.png" alt="loading..." class="news_img"/>
+            <div class="content_navigation">
+                <a href="#2">Дайвінг-тур "Таємниці Зміїного"</a>
+                <div class="interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." />
+                    <img src="./img/side/share_ico.png" alt="loading..." />
+                </div>
+            </div>
+        </div>
+
+        <div class="main_content">
+            <img src="./img/news/third_news.png" alt="loading..."  class="news_img"/>
+            <div class="content_navigation">
+                <a href="#3">Сафарі-тур “Гадяцький”</a>
+                <div class="interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." />
+                    <img src="./img/side/share_ico.png" alt="loading..." />
+                </div>
+            </div>
+        </div>
+
+        <div class="main_content">
+            <img src="./img/news/fourth_news.png" alt="loading..." class="news_img"/>
+            <div class="content_navigation">
+                <a href="#4">Майстер-клас “Ромський”</a>
+                <div class="interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." />
+                    <img src="./img/side/share_ico.png" alt="loading..." />
+                </div>
+            </div>
+        </div>
+
+        <div class="main_content">
+            <img src="./img/news/fifth_news.png" alt="loading..." class="news_img"/>
+            <div class="content_navigation">
+                <a href="#5">Квест-тур “Київ за три дні”</a>
+                <div class="interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." />
+                    <img src="./img/side/share_ico.png" alt="loading..." />
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -50,5 +158,5 @@
         document.getElementById("sideNav").style.width = "0%";
       }
     </script>
-  </body>
+</body>
 </html>
