--- a/detailsPage.html
+++ b/detailsPage.html
@@ -17,7 +17,7 @@
   </head>
 <body>
     <div class="container">
-        <div class="app_bar">
+        <div class="app_bar" id="details_bar">
             <img
               src="./img/details/back_to_page_ico.png"
               alt="loading..."
@@ -30,7 +30,49 @@
               src="./img/details/options_ico.png"
               alt="loading..."
             />
+        </div>
+
+        <div class="details_content">
+            <img src="./img/news/first_news.png" alt="loading..." class="news_img"/>
+            <div class="content_navigation" id="details_content_navigation">
+                <div class="details_interaction">
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
+                </div>
             </div>
+        </div>
+
+        <div class="main_content" id="description_content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. 
+                Up exlaborum incididunt quis nostrud exercitatn. Lorem ipsum dolor sit amet, 
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna wirl aliqua. 
+            </p>
+        </div>
+
+        <div class="feedback_content">
+            <p>Відгуки</p>
+            <div class="comment">
+                <img src="./img/details/man_avatar.png" alt="loading...">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+                    eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. 
+                    Up exlaborum incididunt quis nostrud exercitatn. </p>
+            </div>
+            <div class="comment">
+                <img src="./img/details/woman_avater.png" alt="loading...">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            </div>
+        </div>
+
+        <div class="order_content">
+            <div class="date_content">
+                <p class="title">Наступна подія</p>
+                <p><img src="./img/details/date_ico.png" alt="loading..."> 8 вересня 2024</p>
+                <p><img src="./img/details/peoples_count_ico.png" alt="loading..."> Кількість місць обмежена</p>
+            </div>
+            <button class="btn">забронювати</button>
+        </div>
     </div>
 </body>
 </html>
