--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="content_navigation">
                 <a href="detailsPage.html">Тур вихідного дня "Гостинність Чорнобаївки"</a>
                 <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." />
-                    <img src="./img/side/share_ico.png" alt="loading..." />
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
                 </div>
             </div>
         </div>
@@ -109,8 +109,8 @@
             <div class="content_navigation">
                 <a href="#2">Дайвінг-тур "Таємниці Зміїного"</a>
                 <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." />
-                    <img src="./img/side/share_ico.png" alt="loading..." />
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
                 </div>
             </div>
         </div>
@@ -120,8 +120,8 @@
             <div class="content_navigation">
                 <a href="#3">Сафарі-тур “Гадяцький”</a>
                 <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." />
-                    <img src="./img/side/share_ico.png" alt="loading..." />
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
                 </div>
             </div>
         </div>
@@ -131,8 +131,8 @@
             <div class="content_navigation">
                 <a href="#4">Майстер-клас “Ромський”</a>
                 <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." />
-                    <img src="./img/side/share_ico.png" alt="loading..." />
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
                 </div>
             </div>
         </div>
@@ -142,8 +142,8 @@
             <div class="content_navigation">
                 <a href="#5">Квест-тур “Київ за три дні”</a>
                 <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." />
-                    <img src="./img/side/share_ico.png" alt="loading..." />
+                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
+                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
                 </div>
             </div>
         </div>
