--- a/detailsPage.html
+++ b/detailsPage.html
@@ -21,7 +21,7 @@
             <img
               src="./img/details/back_to_page_ico.png"
               alt="loading..."
-              onclick="openNav()"
+              onclick="back()"
             />
 
             <p>Тур вихідного дня "Гостинність Чорнобаївки"</p>
@@ -74,5 +74,11 @@
             <button class="btn">забронювати</button>
         </div>
     </div>
+
+    <script>
+        function back (){
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
