Shift + Alt + F =) and some code for deteil page

--- a/deteil.html
+++ b/deteil.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-  <title>PZ_1_4</title>
-  <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+    <title>PZ_1_4</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <div class="viev">
     <div class="topnav">
-        <div class= " menu">
-            <a>☰</a>
+        <div class=" menuDet">
         </div>
-        <div class="t1">
-            <a >Популярні тури</a>
+        <div class="t2">
+            <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
         </div>
     </div>
-    
+    <div class="startDet">
+        <div class="DetContent">
+            <div class="buttonsDet">
+                <div class="favorite"></div>
+                <div class="share"></div>
+            </div>
+        </div>
+    </div>
+    <div class="detText">
+        <a>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna wirl
+            aliqua. Up exlaborum incididunt quis nostrud exercitatn. Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna wirl aliqua.
+        </a>
+    </div>
+    <div class="vidguk">
+        <a>
+            Відгуки
+        </a>
+        <div class="firstResponse">
+            <div class="ava1"></div>
+            <div class="textRes1">
+                <a>Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna
+                    wirl aliqua. Up exlaborum incididunt
+                    quis nostrud exercitatn. </a>
+            </div>
+        </div>
+        <div class="secondResponse">
+            <div class="ava2"></div>
+            <div class="textRes2">
+                <a>
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="downBar">
+        <div class="downBarText"> <a>Наступна подія</a></div>
+        <div class="date">
+            <div></div>
+        </div>
+        <div class="someDich"></div>
+    </div>
 </div>
+
 <body>
 </body>
+
 </html>
