creating page of news

--- a/index.html
+++ b/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-  <title>PZ_1_4</title>
-  <link rel="stylesheet" type="text/css" href="./css/main.css">
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=yes"
+    />
+    <title>PZ_1_4</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="background">
+      <div class="app_bar_bg">
+        <div class="dashes"></div>
+        <div class="popular_tour">
+          <a> Популярні тури</a>
+        </div>
+      </div>
+      <div class="news1">
+        <div class="placeholder1">
+          <div class="text1">
+            <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
+          </div>
+          <div class="sharelike1">
+            <div class="like"></div>
+            <div class="share"></div>
+          </div>
+        </div>
+      </div>
+      <div class="news2">
+        <div class="placeholder2">
+          <div class="text2">
+            <a>Дайвінг-тур "Таємниці Зміїного"</a>
+          </div>
+          <div class="sharelike2">
+            <div class="like"></div>
+            <div class="share"></div>
+          </div>
+        </div>
+      </div>
+      <div class="news3">
+        <div class="placeholder3">
+          <div class="text3">
+            <a>Сафарі-тур “Гадяцький”"</a>
+          </div>
+          <div class="sharelike3">
+            <div class="like"></div>
+            <div class="share"></div>
+          </div>
+        </div>
+      </div>
+      <div class="news4">
+        <div class="placeholder4">
+          <div class="text4">
+            <a>Майстер-клас “Ромський”</a>
+          </div>
+          <div class="sharelike4">
+            <div class="like"></div>
+            <div class="share"></div>
+          </div>
+        </div>
+      </div>
+      <div class="news5">
+        <div class="placeholder5">
+          <div class="text5">
+            <a>Квест-тур “Київ за три дні”</a>
+          </div>
+          <div class="sharelike5">
+            <div class="like"></div>
+            <div class="share"></div>
+          </div>
+        </div>
+      </div>
+      <div class="navbar">
+        <div class="back"></div>
+        <div class="home"></div>
+        <div class="recent"></div>
+      </div>
+    </div>
+  </body>
 </html>
