Done deteil page

--- a/deteil.html
+++ b/deteil.html
@@ -7,7 +7,7 @@
     <title>PZ_1_4</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<div class="viev">
+<div class="vievDet">
     <div class="topnav">
         <div class=" menuDet">
         </div>
@@ -59,9 +59,25 @@
     <div class="downBar">
         <div class="downBarText"> <a>Наступна подія</a></div>
         <div class="date">
-            <div></div>
+            <div class="downBarDet1"></div>
+            <div class="textDownBar1">
+                <a>15 травня 2022</a>
+            </div>
         </div>
-        <div class="someDich"></div>
+        <div class="someDich">
+            <div class="downBarDet2"></div>
+            <div class="textDownBar2">
+                <a>Кількість місць необмежена</a>
+            </div>
+        </div>
+        <button class="buttonDown">
+            ЗАБРОНЮВАТИ
+        </button>
+    </div>
+    <div class="phoneMenuDet">
+        <div class="back"></div>
+        <div class="home"></div>
+        <div class="recent"></div>
     </div>
 </div>
 
