--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a> Популярні тури</a>
         </div>
       </div>
-      <div class="news1">
+      <div class="news1" onclick="location.href='detail_page.html'">
         <div class="placeholder1">
           <div class="text1">
             <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
