--- a/deteil.html
+++ b/deteil.html
@@ -9,7 +9,7 @@
 </head>
 <div class="vievDet">
     <div class="topnav">
-        <div class=" menuDet">
+        <div class=" menuDet" onclick="location.href='index.html'">
         </div>
         <div class="t2">
             <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
