--- a/detail_page.html
+++ b/detail_page.html
@@ -11,7 +11,15 @@
   </head>
   <body>
     <div class="background_detail_page">
-      <div class="app_bar_bg"></div>
+      <div class="app_bar_bg">
+        <div class="arrow"  onclick="location.href='index.html'"></div>
+        <div class="tour">
+            <a> Тур вихідного дня “Чор...</a>
+        </div>
+        <div class="three_points">
+            <a>⋮</a>
+        </div>
+      </div>
       <div class="explotion">
         <div class="placeholder">
           <div class="text1">
@@ -24,9 +32,57 @@
         </div>
       </div>
       <div class="lorem_ipsut">
-        <a class="lorem_ipsut2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. </a>
+        <a class="lorem_ipsut2"
+          >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up
+          exlaborum incididunt quis nostrud exercitatn. Lorem ipsum dolor sit
+          amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna wirl aliqua.
+        </a>
       </div>
-      <div class="respones"></div>
+      <div class="respones">
+        <div class="res">
+          <a>Відгуки</a>
+        </div>
+        <div class="man">
+          <div class="man_photo"></div>
+          <div class="man_mess">
+            <a class="text_mess1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna wirl aliqua.
+              Up exlaborum incididunt quis nostrud exercitatn.
+            </a>
+          </div>
+        </div>
+        <div class="woman">
+          <div class="woman_photo"></div>
+          <div class="woman_mess">
+            <a class="text_mess2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
+          </div>
+        </div>
+      </div>
+      <div class="next_event">
+        <div class="next">
+            <a> Наступна подія</a>
+        </div>
+        <div class="date">
+            <div class="cal"></div>
+            <div class="cal_text">
+                <a class="may"> 15 травня 2022</a>
+            </div>
+        </div>
+        <div class="social">
+            <div class="soc"></div>
+            <div class="soc_text">
+                <a class="place"> Кількість місць необмежена</a>
+            </div>
+        </div>
+      </div>
+      <button class="booking">ЗАБРОНЮВАТИ</button>
+      <div class="navbar">
+        <div class="back"></div>
+        <div class="home"></div>
+        <div class="recent"></div>
+      </div>
     </div>
   </body>
 </html>
