--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="background">
       <div class="app_bar_bg">
-        <div class="dashes"></div>
+        <div class="dashes" onclick="location.href='acc.html'"></div>
         <div class="popular_tour">
           <a> Популярні тури</a>
         </div>
