--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>PZ_1_4</title>
-  <link rel="stylesheet" type="text/css" href="/pz-1-4/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+  <nav class="app-bar">
+    <button style="background-color: rgba(28,28,28,0)"><img src="/img/butt_menu.png" alt="button menu"
+        style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></button>
+    <h1>Популярні тури</h1>
+  </nav>
+
+  <div class="main-info">
+    <img src="/img/1.png" alt="first news">
+  </div>
+
+  <nav class="navbar"><img src="/img/back.png" alt="back" style="width: 15px; height: 17px; top: 1567px; left: 72px; border: 2px solid #eee;">
+    <img src="/img/home.png" alt="home" style="width: 16px; height: 16px; top: 1568px; left: 172px; border: 2px solid #eee;">
+    <img src="/img/recent.png" alt="recent" style="width: 16px; height: 16px; top: 1568px; left: 273px; border: 2px solid #eee;">
+  
+  </nav>
+
 </body>
 </html>
