--- a/index.html
+++ b/index.html
@@ -16,147 +16,209 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
   <body>
-    <div class="container">
-        <div id="sideNav" class="overlay">
-        <img
-          src="./img/navbar/close_ico.png"
-          class="closebtn"
-          onclick="closeNav()"
-        />
-        <div class="overlay-content">
-          <div class="information_side">
-            <img
-              src="./img/navbar/bg.png"
-              alt="loading..."
-              class="navbar_bg_img"
-            />
-            <div class="content">
-              <a href="#"
-                ><img src="./img/navbar/people_ico.png" alt="loading..." />Мій
-                профіль</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/order_ico.png"
-                  alt="loading..."
-                />Замовлення</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/message_ico.png"
-                  alt="loading..."
-                />Повідомлення</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/heart_ico.png"
-                  alt="loading..."
-                />Улюбленне</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/friends_ico.png"
-                  alt="loading..."
-                />Друзі</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/mail_ico.png"
-                  alt="loading..."
-                />Сповіщення</a
-              >
-              <a href="#"
-                ><img
-                  src="./img/navbar/settings_ico.png"
-                  alt="loading..."
-                />Налаштування</a
-              >
+    <div class="iav_container">
+      <input type="checkbox" id="toggleNav" class="iav_toggle_nav" />
+      <label for="toggleNav" class="iav_app_bar">
+        <img src="./img/side/menu_ico.png" alt="menu" />
+        <p>Популярні тури</p>
+      </label>
+
+      <div id="sideNav" class="iav_overlay">
+        <label for="toggleNav">
+          <img src="./img/navbar/close_ico.png" class="iav_closebtn" />
+        </label>
+        <div class="iav_overlay_content">
+          <div class="iav_information_side">
+            <img src="./img/navbar/bg.png" class="iav_navbar_bg_img" />
+            <div class="iav_content">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/people_ico.png"
+                      alt="profile..."
+                    />Мій профіль</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/order_ico.png"
+                      alt="order..."
+                    />Замовлення</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/message_ico.png"
+                      alt="messages..."
+                    />Повідомлення</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/heart_ico.png"
+                      alt="preference"
+                    />Улюбленне</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/friends_ico.png"
+                      alt="friends"
+                    />Друзі</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/mail_ico.png"
+                      alt="notifications"
+                    />Сповіщення</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./img/navbar/settings_ico.png"
+                      alt="settings"
+                    />Налаштування</a
+                  >
+                </li>
+              </ul>
             </div>
           </div>
-          <div class="avatar-side">
+          <div class="iav_avatar_side">
             <img
               src="./img/navbar/avatar.png"
-              alt="loading..."
-              class="navbar_avatar_img"
+              alt="avatar"
+              class="iav_navbar_avatar_img"
             />
             <p>Іскендеров Артур</p>
           </div>
         </div>
-        </div>
+      </div>
 
-        <div class="app_bar">
+
+      <div class="iav_news_card">
         <img
-          src="./img/side/menu_ico.png"
-          alt="loading..."
-          onclick="openNav()"
+          src="./img/news/first_news.png"
+          alt="first news"
+          class="iav_news_img"
         />
-        <p>Популярні тури</p>
+        <div class="iav_content_navigation">
+          <a href="detailsPage.html"
+            >Тур вихідного дня "Гостинність Чорнобаївки"</a
+          >
+          <div class="iav_interaction">
+            <img
+              src="./img/side/heart_ico.png"
+              alt="like"
+              class="iav_interaction_img"
+            />
+            <img
+              src="./img/side/share_ico.png"
+              alt="share"
+              class="iav_interaction_img"
+            />
+          </div>
         </div>
+      </div>
 
-        <div class="main_content">
-            <img src="./img/news/first_news.png" alt="loading..." class="news_img"/>
-            <div class="content_navigation">
-                <a href="detailsPage.html">Тур вихідного дня "Гостинність Чорнобаївки"</a>
-                <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
-                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
-                </div>
-            </div>
+      <div class="iav_news_card">
+        <img
+          src="./img/news/second_news.png"
+          alt="second news"
+          class="iav_news_img"
+        />
+        <div class="iav_content_navigation">
+          <a href="#2">Дайвінг-тур "Таємниці Зміїного"</a>
+          <div class="iav_interaction">
+            <img
+              src="./img/side/heart_ico.png"
+              alt="like"
+              class="iav_interaction_img"
+            />
+            <img
+              src="./img/side/share_ico.png"
+              alt="share"
+              class="iav_interaction_img"
+            />
+          </div>
         </div>
+      </div>
 
-        <div class="main_content">
-            <img src="./img/news/second_news.png" alt="loading..." class="news_img"/>
-            <div class="content_navigation">
-                <a href="#2">Дайвінг-тур "Таємниці Зміїного"</a>
-                <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
-                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
-                </div>
-            </div>
+      <div class="iav_news_card">
+        <img
+          src="./img/news/third_news.png"
+          alt="third news"
+          class="iav_news_img"
+        />
+        <div class="iav_content_navigation">
+          <a href="#3">Сафарі-тур “Гадяцький”</a>
+          <div class="iav_interaction">
+            <img
+              src="./img/side/heart_ico.png"
+              alt="like"
+              class="iav_interaction_img"
+            />
+            <img
+              src="./img/side/share_ico.png"
+              alt="share"
+              class="iav_interaction_img"
+            />
+          </div>
         </div>
+      </div>
 
-        <div class="main_content">
-            <img src="./img/news/third_news.png" alt="loading..."  class="news_img"/>
-            <div class="content_navigation">
-                <a href="#3">Сафарі-тур “Гадяцький”</a>
-                <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
-                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
-                </div>
-            </div>
+      <div class="iav_news_card">
+        <img
+          src="./img/news/fourth_news.png"
+          alt="fourth news"
+          class="iav_news_img"
+        />
+        <div class="iav_content_navigation">
+          <a href="#4">Майстер-клас “Ромський”</a>
+          <div class="iav_interaction">
+            <img
+              src="./img/side/heart_ico.png"
+              alt="like"
+              class="iav_interaction_img"
+            />
+            <img
+              src="./img/side/share_ico.png"
+              alt="share"
+              class="iav_interaction_img"
+            />
+          </div>
         </div>
+      </div>
 
-        <div class="main_content">
-            <img src="./img/news/fourth_news.png" alt="loading..." class="news_img"/>
-            <div class="content_navigation">
-                <a href="#4">Майстер-клас “Ромський”</a>
-                <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
-                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
-                </div>
-            </div>
+      <div class="iav_news_card">
+        <img
+          src="./img/news/fifth_news.png"
+          alt="fifth news"
+          class="iav_news_img"
+        />
+        <div class="iav_content_navigation">
+          <a href="#5">Квест-тур “Київ за три дні”</a>
+          <div class="iav_interaction">
+            <img
+              src="./img/side/heart_ico.png"
+              alt="like"
+              class="iav_interaction_img"
+            />
+            <img
+              src="./img/side/share_ico.png"
+              alt="share"
+              class="iav_interaction_img"
+            />
+          </div>
         </div>
-
-        <div class="main_content">
-            <img src="./img/news/fifth_news.png" alt="loading..." class="news_img"/>
-            <div class="content_navigation">
-                <a href="#5">Квест-тур “Київ за три дні”</a>
-                <div class="interaction">
-                    <img src="./img/side/heart_ico.png" alt="loading..." class="interaction_img"/>
-                    <img src="./img/side/share_ico.png" alt="loading..." class="interaction_img"/>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-
-    <script>
-      function openNav() {
-        document.getElementById("sideNav").style.width = "360px";
-      }
-
-      function closeNav() {
-        document.getElementById("sideNav").style.width = "0%";
-      }
-    </script>
-</body>
+  </body>
 </html>
