fix comented problem. Ready to review

--- a/deteil.html
+++ b/deteil.html
@@ -7,23 +7,23 @@
     <title>PZ_1_4</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<div class="vievDet">
+<div class="viev viev-detail">
     <div class="topnav">
-        <div class=" menuDet" onclick="location.href='index.html'">
+        <div class="menu menu-detail" onclick="location.href='index.html'">
         </div>
-        <div class="t2">
+        <div class="title-second">
             <a>Тур вихідного дня “Гостинність Чорнобаївки”</a>
         </div>
     </div>
-    <div class="startDet">
-        <div class="DetContent">
+    <div class="start-detail">
+        <div class="detail-content">
             <div class="buttonsDet">
                 <div class="favorite"></div>
                 <div class="share"></div>
             </div>
         </div>
     </div>
-    <div class="detText">
+    <div class="detail-text">
         <a>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna wirl
@@ -36,9 +36,9 @@
         <a>
             Відгуки
         </a>
-        <div class="firstResponse">
-            <div class="ava1"></div>
-            <div class="textRes1">
+        <div class="first-response">
+            <div class="avatar-first"></div>
+            <div class="text-first-response">
                 <a>Lorem ipsum dolor sit amet, consectetur
                     adipisicing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna
@@ -46,9 +46,9 @@
                     quis nostrud exercitatn. </a>
             </div>
         </div>
-        <div class="secondResponse">
-            <div class="ava2"></div>
-            <div class="textRes2">
+        <div class="second-response">
+            <div class="avatar-second"></div>
+            <div class="text-second-response">
                 <a>
                     Lorem ipsum dolor sit amet, consectetur
                     adipisicing elit
@@ -56,25 +56,25 @@
             </div>
         </div>
     </div>
-    <div class="downBar">
-        <div class="downBarText"> <a>Наступна подія</a></div>
+    <div class="downbar">
+        <div class="downbar-text"> <a>Наступна подія</a></div>
         <div class="date">
-            <div class="downBarDet1"></div>
-            <div class="textDownBar1">
+            <div class="downbar-detail-first"></div>
+            <div class="downbar-text">
                 <a>15 травня 2022</a>
             </div>
         </div>
-        <div class="someDich">
-            <div class="downBarDet2"></div>
-            <div class="textDownBar2">
+        <div class="notification">
+            <div class="downbar-detail-second"></div>
+            <div class="downbar-text">
                 <a>Кількість місць необмежена</a>
             </div>
         </div>
-        <button class="buttonDown">
-            ЗАБРОНЮВАТИ
+        <button class="button-down">
+            <a href="#">ЗАБРОНЮВАТИ</a>
         </button>
     </div>
-    <div class="phoneMenuDet">
+    <div class="phone-menu phone-menu-detail">
         <div class="back"></div>
         <div class="home"></div>
         <div class="recent"></div>
@@ -83,5 +83,8 @@
 
 <body>
 </body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
 
 </html>
