--- a/index.html
+++ b/index.html
@@ -9,65 +9,70 @@
 </head>
 
 <body>
-    <div class="viev">
+    <div class="viev viev-index">
         <div class="topnav">
-            <div class=" menu" onclick="location.href='side.html'">
+            <div class="menu menu-index">
+                <a href="./side.html">☰</a>
             </div>
-            <div class="t1">
+            <div class="text-title">
                 <a>Популярні тури</a>
             </div>
         </div>
-        <div class="news1" onclick="location.href='deteil.html'">
-            <div class="news1Content">
-                <div class="news1ContentText"><a>Тур вихідного дня “Гостинність Чорнобаївки”</a></div>
+        <div class="news news1">
+            <div class="news-content">
+                <div class="news-content-text"><a href="./deteil.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
+                </div>
                 <div class="buttons">
                     <div class="favorite"></div>
                     <div class="share"></div>
                 </div>
             </div>
         </div>
-        <div class="news2">
-            <div class="news1Content">
-                <div class="news1ContentText"><a>Дайвінг-тур "Таємниці Зміїного"</a></div>
+        <div class="news news2">
+            <div class="news-content">
+                <div class="news-content-text"><a href="./index.html">Дайвінг-тур "Таємниці Зміїного"</a></div>
                 <div class="buttons">
                     <div class="favorite"></div>
                     <div class="share"></div>
                 </div>
             </div>
         </div>
-        <div class="news3">
-            <div class="news1Content">
-                <div class="news1ContentText"><a>Сафарі-тур “Гадяцький”</a></div>
+        <div class="news news3">
+            <div class="news-content">
+                <div class="news-content-text"><a href="./index.html">Сафарі-тур “Гадяцький”</a></div>
                 <div class="buttons">
                     <div class="favorite"></div>
                     <div class="share"></div>
                 </div>
             </div>
         </div>
-        <div class="news4">
-            <div class="news1Content">
-                <div class="news1ContentText"><a>Майстер-клас “Ромський”</a></div>
+        <div class="news news4">
+            <div class="news-content">
+                <div class="news-content-text"><a href="./index.html">Майстер-клас “Ромський”</a></div>
                 <div class="buttons">
                     <div class="favorite"></div>
                     <div class="share"></div>
                 </div>
             </div>
         </div>
-        <div class="news5">
-            <div class="news1Content">
-                <div class="news1ContentText"><a>Квест-тур “Київ за три дні”</a></div>
+        <div class="news news5">
+            <div class="news-content">
+                <div class="news-content-text"><a href="./index.html">Квест-тур “Київ за три дні”</a></div>
                 <div class="buttons">
                     <div class="favorite"></div>
                     <div class="share"></div>
                 </div>
             </div>
         </div>
-        <div class="phoneMenu">
+        <div class="phone-menu phone-menu-index">
             <div class="back"></div>
             <div class="home"></div>
             <div class="recent"></div>
         </div>
     </div>
 </body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
 
 </html>
