--- a/side.html
+++ b/side.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div class="sideNavbar">
+    <div class="side-navbar">
         <div class="flex">
-            <div class="sideL">
+            <div class="side-left">
                 <div class="ground">
                     <div class="oval">
                         <div class="avatar"></div>
@@ -21,33 +21,33 @@
                         <a>Іван Марченко</a>
                     </div>
                 </div>
-                <div class="list">
-                    <div class="icons">
-                        <div class="l1"></div>
-                        <div class="l2"></div>
-                        <div class="l3"></div>
-                        <div class="l4"></div>
-                        <div class="l5"></div>
-                        <div class="l6"></div>
-                        <div class="l7"></div>
-                    </div>
-                    <div class="labels">
-                        <div class="marg1"><a>Мій профіль</a></div>
-                        <div class="marg"><a>Замовлення</a></div>
-                        <div class="marg"> <a>Повідомлення</a></div>
-                        <div class="marg"><a>Улюблене</a></div>
-                        <div class="marg"><a>Друзі</a></div>
-                        <div class="marg"><a>Сповіщення</a></div>
-                        <div class="marg"><a>Налаштування </a></div>
-                    </div>
-                </div>
+                <nav class="list">
+                    <ul>
+                        <li class="menu-img"><img src="./img/vector.png"></li>
+                        <li class="menu-img"><img src="./img/purch.png"></li>
+                        <li class="menu-img"><img src="./img/mess.png"></li>
+                        <li class="menu-img"><img src="./img/fav.png"></li>
+                        <li class="menu-img"><img src="./img/frend.png"></li>
+                        <li class="menu-img"><img src="./img/letter.png"></li>
+                        <li class="menu-img"><img src="./img/spam.png"></li>
+                    </ul>
+                    <ul class="side-menu-text-bar">
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Мій профіль</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Замовлення</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Повідомлення</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Улюблене</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Друзі</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Сповіщення</a></li>
+                        <li class="margin-for-text-menu"><a class="side-menu-text" href="#">Налаштування </a></li>
+                    </ul>
+                </nav>
 
             </div>
-            <div class="sideCl">
-                <div class="exit" onclick="location.href='index.html'"></div>
+            <div class="side-right">
+                <div class="exit"><a href="./index.html">╳</a></div>
             </div>
         </div>
-        <div class="phoneMenuSide">
+        <div class="phone-menu">
             <div class="back"></div>
             <div class="home"></div>
             <div class="recent"></div>
@@ -55,5 +55,8 @@
     </div>
 
 </body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
 
 </html>
